# ECE368_Labs

./: README.md
ECE368_LAB_1_LDA_QDA/ldaqda/: ldaqda.py
ECE368_LAB_1_SPAM/classifier/: classifier.py
ECE368_LAB_2/reg/: regression.py
ECE368_LAB_3/: inference.py
classifier/: CMakeLists.txt  classifier.cpp  classifier.py  matplotlib.h  util.h
ldaqda/: ldaqda.py
